--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,6 @@ android {
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
-
     signingConfigs {
         // We use a bundled debug keystore, to allow debug builds from CI to be upgradable
 //        debug {
@@ -75,10 +74,12 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.0-beta01"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-beta01"
 
-    androidTestImplementation 'junit:junit:4.13.1'
-    androidTestImplementation 'androidx.test:rules:1.3.0'
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation "androidx.ui:ui-test:$compose_version"
+//    androidTestImplementation 'junit:junit:4.13.1'
+//    androidTestImplementation 'androidx.test:rules:1.3.0'
+//    androidTestImplementation 'androidx.test:runner:1.3.0'
+//    androidTestImplementation "androidx.ui:ui-test:$compose_version"
+
+  //  implementation 'com.github.luca992:coil-composable:0.3.3'
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
