--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ subprojects {
     repositories {
         google()
         jcenter()
+     //   maven { setUrl("https://jitpack.io") }
     }
 
     apply plugin: 'com.diffplug.spotless'
