--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,10 @@ dependencies {
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.0-beta01"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-beta01"
+//
+//    implementation 'com.github.bumptech.glide:glide:4.11.0'
+//    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'jp.wasabeef.composable:coil:1.0.1'
 
 //    androidTestImplementation 'junit:junit:4.13.1'
 //    androidTestImplementation 'androidx.test:rules:1.3.0'
@@ -85,7 +89,7 @@ dependencies {
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
     kotlinOptions {
         // Treat all Kotlin warnings as errors
-        allWarningsAsErrors = true
+        allWarningsAsErrors = false
         freeCompilerArgs += '-Xopt-in=kotlin.RequiresOptIn'
         // Enable experimental coroutines APIs, including Flow
         freeCompilerArgs += '-Xopt-in=kotlin.Experimental'
